# ros_practice

devel/: local_setup.sh  setup.sh
devel/include/beginner_tutorials/: Num.h
devel/lib/beginner_tutorials/: add_two_ints_client  add_two_ints_server  listener  listener.py  talker  talker.py
devel/lib/pkgconfig/: beginner_tutorials.pc
devel/lib/python3/dist-packages/beginner_tutorials/msg/: _Num.py
devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-extras.cmake  beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
devel/share/roseus/ros/beginner_tutorials/: manifest.l
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  listener.cpp
src/foobar/: CMakeLists.txt  package.xml
